--- a/Automobili/Automobili.csproj
+++ b/Automobili/Automobili.csproj
@@ -44,7 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Automobil.cs" />
+    <Compile Include="Automobil.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormAutomobili.cs">
       <SubType>Form</SubType>
     </Compile>
